# OminiConnect

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  Plan.md  README.md  litellm_config.yaml  llm_config.yaml  panda.yaml  portal.db  sdk_plan.md
dashboard/: Cargo.toml
dashboard/src/: api.rs  lib.rs  model.rs
hybrid_inference/: Cargo.toml
hybrid_inference/src/: config.rs  lib.rs  local_llm.rs  router.rs  rules.rs
omini_connect/connectors/dingtalk/: Cargo.toml
omini_connect/connectors/dingtalk/src/: docs.rs  lib.rs  tools.rs
omini_connect/connectors/maton/: Cargo.toml
omini_connect/connectors/wechatwork/: Cargo.toml
omini_connect/connectors/wechatwork/src/: tools.rs
omini_connect/portal/: Cargo.toml  DATABASE.md
omini_connect/portal/docs/: LLM-INTEGRATION.md
omini_connect/portal/frontend/: package.json
omini_connect/portal/frontend/src/: App.tsx
omini_connect/portal/frontend/src/api/: client.ts
omini_connect/portal/frontend/src/components/: CatalogProviderCard.tsx  CategoryFilterBar.tsx  IntegrationProviderLogo.tsx  ScopeSelector.tsx  ViewToggle.tsx
omini_connect/portal/frontend/src/lib/: builtinGlobalCatalogExclusions.ts  builtinPlatforms.ts  integrationCatalogNormalize.ts  resolveBuiltinCatalogLogo.ts
omini_connect/portal/frontend/src/pages/: AddNangoConnector.tsx  ConnectManagedHub.tsx  ConnectorConfig.tsx  Dashboard.tsx  IntegrationCatalog.tsx  Login.tsx  Signup.tsx
omini_connect/portal/sdk/: README.md
omini_connect/portal/sdk/flutter/: pubspec.yaml
omini_connect/portal/sdk/flutter/lib/: llm_manager.dart  ominiconnect.dart
omini_connect/portal/sdk/flutter/test/: ominiconnect_test.dart
omini_connect/portal/sdk/go/ominiconnect/: go.mod  llm.go  ominiconnect.go  ominiconnect_test.go
omini_connect/portal/sdk/ios/: Package.swift
omini_connect/portal/sdk/js/: package-lock.json  package.json
omini_connect/portal/sdk/js/src/: index.ts
omini_connect/portal/sdk/js/tests/: llm.test.ts
omini_connect/portal/sdk/python/ominiconnect/: __init__.py  client.py  connectors.py  errors.py  (+2 more)
omini_connect/portal/sdk/rust/: Cargo.toml
omini_connect/portal/src/: app.rs  lib.rs  main.rs  nango.rs  portal_env.rs  tools.rs  websocket.rs
omini_connect/portal/src/api/: agents.rs  call.rs  connectors.rs  mcp.rs  mod.rs  nango_catalog.rs  nango_connection.rs  nango_hq_proxy.rs  proxy.rs  status.rs  tools.rs
omini_connect/portal/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
omini_connect/portal/src/connector_engine/: mod.rs
omini_connect/portal/src/db/: mod.rs
omini_connect/portal/src/oauth/: handlers.rs  mod.rs  models.rs  vault_namespaced.rs
omini_connect/portal/tools/: README.md  TOOLS.md  TOOLS_ROUTING.md  enrich-descriptions.js
omini_connect/portal/tools/docs/: 17hats.md  active-campaign.md  adobe.md  adyen.md  affinity.md  aha.md  aircall.md  aiven.md  akamai.md  alibaba.md  anchor.md  anthropic.md  apaleo.md  apify.md  apollo.md  artfol.md  attach.md  attio.md  auth0.md  autobot.md  avalara-sandbox.md  avalara.md  avanan.md  aws-iam.md  azure-blob-storage.md  azure-devops.md  azure.md  azure_devops.md  baidu.md  bamboohr-basic.md  basecamp.md  battlenet.md  bear.md  bettercontact.md  bigcommerce.md  bilibili.md  bill-sandbox.md  bing-webmasters.md  bird.md  bitbucket.md  (+521 more)
omini_connect/portal/tools/registry/: 17hats.yaml  accelo.yaml  active-campaign.yaml  acuity.yaml  adobe.yaml  adyen.yaml  affinity.yaml  aha.yaml  aircall.yaml  airtable.yaml  aiven.yaml  akamai.yaml  algolia.yaml  alibaba.yaml  amplitude.yaml  anchor.yaml  anthropic.yaml  apaleo.yaml  apify.yaml  apollo.yaml  artfol.yaml  asana.yaml  attach.yaml  attio.yaml  auth0.yaml  autobot.yaml  autodesk.yaml  avalara-sandbox.yaml  avalara.yaml  avanan.yaml  avaza.yaml  avoma.yaml  aws-iam.yaml  aws-scim.yaml  aws.yaml  axiom.yaml  azure-blob-storage.yaml  azure-devops.yaml  azure.yaml  azure_devops.yaml  (+766 more)
omini_connect/skills/: Cargo.toml
omini_connect/skills/src/: lib.rs  marketplace.rs
omni/audit_logger/: Cargo.toml
omni/audit_logger/src/: export.rs  lib.rs
omni/connectors/feishu/: Cargo.toml
omni/connectors/feishu/src/: api.rs  docs.rs  lib.rs  server.rs
omni/connectors/feishu/tests/: test_feishu_connector.rs
omni/oauth_vault/: Cargo.toml
omni/oauth_vault/src/: lib.rs  pkce.rs  platform.rs  token_store.rs
omni/oauth_vault/tests/: test_oauth_vault.rs
omni/portal/: Cargo.toml  DATABASE.md
omni/portal/frontend/: index.html  package-lock.json  package.json
omni/portal/frontend/src/: App.tsx
omni/portal/src/: app.rs  lib.rs  main.rs
omni/portal/src/api/: connectors.rs  mod.rs  proxy.rs  status.rs
omni/portal/src/auth/: handlers.rs  middleware.rs  mod.rs
omni/portal/src/db/: mod.rs
omni/portal/src/oauth/: handlers.rs  mod.rs  models.rs
omni/schema_registry/: Cargo.toml
omni/schema_registry/src/: adapters.rs  docs.rs  lib.rs  mcp.rs  models.rs  registry.rs
omni/sdk/: Cargo.toml
omni/sdk/src/: client.rs  config.rs  lib.rs  skill.rs
portal/tests/llm_tool_selection/: Cargo.toml  README.md  config.yaml
portal/tests/llm_tool_selection/queries/: 17hats.yaml  accelo.yaml  active-campaign.yaml  acuity.yaml  adobe.yaml  adyen.yaml  affinity.yaml  aha.yaml  aircall.yaml  airtable.yaml  airtable_more.yaml  aiven.yaml  akamai.yaml  algolia.yaml  alibaba.yaml  amplitude.yaml  anchor.yaml  anthropic.yaml  apaleo.yaml  apify.yaml  apollo.yaml  artfol.yaml  asana.yaml  attach.yaml  attio.yaml  auth0.yaml  autobot.yaml  autodesk.yaml  avalara-sandbox.yaml  avalara.yaml  avanan.yaml  avaza.yaml  avoma.yaml  aws-iam.yaml  aws-scim.yaml  aws.yaml  axiom.yaml  azure-blob-storage.yaml  azure-devops.yaml  azure.yaml  (+856 more)
portal/tests/llm_tool_selection/scripts/: generate_queries.py  run_batch.sh  run_tests.sh
portal/tests/llm_tool_selection/src/: evaluator.rs  lib.rs  main.rs  query.rs  registry.rs  reporter.rs
python/rust/: Cargo.toml
schema_registry/: Cargo.toml
schema_registry/src/: adapters.rs  docs.rs  lib.rs  registry.rs  tool_trait.rs
sdk/python/: pyproject.toml
sdk/python/ominiconnect/: agents.py  llm.py
(+1640 files in other folders)
