[workspace]
resolver = "2"
members = [
    # Panda core (forked)
    "panda/crates/panda-pdk",
    "panda/crates/panda-config",
    "panda/crates/panda-proxy",
    "panda/crates/panda-server",
    "panda/crates/panda-wasm",
    # Panda Wasm plugins
    "panda/crates/wasm-plugin-sample",
    "panda/crates/wasm-plugin-ssrf-guard",
    # OminiConnect value layer
    "oauth_vault",
    "schema_registry",
    "connectors/feishu",
    "connectors/dingtalk",
    "connectors/wechatwork",
    "connectors/maton",
    "wasm_policies",
    "audit_logger",
    "src",
    "skills",
    "hybrid_inference",
    "portal",
    "dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OminiConnect contributors"]
license = "MIT OR Apache-2.0"

# Per-crate release settings must live at workspace root (not in member Cargo.toml).
# (`lto` is not allowed here; use `RUSTFLAGS='-C lto=fat'` when building the wasm crate if needed.)
[profile.release.package.omini-connect-wasm-policies]
opt-level = "s"
