[workspace]
resolver = "2"
members = [
    # OminiConnect value layer
    "oauth_vault",
    "schema_registry",
    "connectors/feishu",
    "connectors/dingtalk",
    "connectors/wechatwork",
    "connectors/maton",
    "wasm_policies",
    "audit_logger",
    "src",
    "skills",
    "hybrid_inference",
    "portal",
    "portal/tests/llm_tool_selection",
    "dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OminiConnect contributors"]
license = "MIT OR Apache-2.0"

# Per-crate release settings must live at workspace root (not in member Cargo.toml).
# (`lto` is not allowed here; use `RUSTFLAGS='-C lto=fat'` when building the wasm crate if needed.)
[profile.release.package.omini-connect-wasm-policies]
opt-level = "s"
