[package]
name = "omni-dashboard"
version = "0.1.0"
edition = "2021"
description = "Monitoring dashboard for OmniConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
