[package]
name = "omini-connect-hybrid-inference"
version = "0.1.0"
edition = "2021"
description = "Hybrid inference for OminiConnect - route sensitive tasks to local LLM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
