[package]
name = "omini-connect-schema-registry"
version = "0.1.0"
edition = "2021"
description = "Centralized schema registry for OminiConnect tool discovery"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.omini-connect-feishu]
path = "../connectors/feishu"
optional = true

[dependencies.omini-connect-dingtalk]
path = "../connectors/dingtalk"
optional = true

[dependencies.omini-connect-wechatwork]
path = "../connectors/wechatwork"
optional = true

[features]
default = []
feishu = ["omini-connect-feishu"]
dingtalk = ["omini-connect-dingtalk"]
wechatwork = ["omini-connect-wechatwork"]
all = ["feishu", "dingtalk", "wechatwork"]
