[package]
name = "omini-connect-skills"
version = "0.1.0"
edition = "2021"
description = "Skill marketplace for OminiConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.8"
