[package]
name = "omni-audit_logger"
version = "0.1.0"
edition = "2021"
description = "Audit logging for OmniConnect compliance"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["sync", "rt", "macros"] }
thiserror = "1.0"
csv = "1.3"

[dev-dependencies]
tempfile = "3.8"
