[package]
name = "omni-oauth_vault"
version = "0.1.0"
edition = "2021"
description = "OAuth2 token storage and refresh for OmniConnect"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
