[package]
name = "omni-portal"
version = "0.1.0"
edition = "2021"
description = "Operator portal for OmniConnect - manage connector OAuth credentials"

[dependencies]
# Web server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
bcrypt = "0.16"
uuid = { version = "1.0", features = ["v4", "serde"] }

# OAuth vault (shared)
omni-oauth_vault = { path = "../oauth_vault" }

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
