[package]
name = "omni-schema-registry"
version = "0.1.0"
edition = "2021"
description = "Centralized schema registry for OmniConnect tool discovery"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.omni-connector-feishu]
path = "../connectors/feishu"
optional = true

[dependencies.omni-connector-dingtalk]
path = "../connectors/dingtalk"
optional = true

[dependencies.omni-connector-wechatwork]
path = "../connectors/wechatwork"
optional = true

[features]
default = []
feishu = ["omni-connector-feishu"]
dingtalk = ["omni-connector-dingtalk"]
wechatwork = ["omni-connector-wechatwork"]
all = ["feishu", "dingtalk", "wechatwork"]
