[package]
name = "omni-sdk"
version = "0.1.0"
edition = "2021"
description = "Developer SDK for OmniConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
