[project]
name = "ominiconnect"
version = "0.1.0"
description = "Python SDK for OminiConnect portal"
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ominiconnect*"]