[package]
name = "omini-connect-dingtalk"
version = "0.1.0"
edition = "2021"
description = "DingTalk MCP connector for OminiConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
axum = "0.7"
tower = "0.4"
anyhow = "1.0"

[[bin]]
name = "dingtalk_server"
path = "src/bin/dingtalk_server.rs"

[lib]
path = "src/lib.rs"
