[package]
name = "omini-connect-maton"
version = "0.1.0"
edition = "2021"
description = "Maton.ai connector for OminiConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
