[package]
name = "omni-connector-feishu"
version = "0.1.0"
edition = "2021"
description = "Feishu (Lark) MCP connector for OmniConnect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
axum = "0.7"
tower = "0.4"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "feishu_server"
path = "src/bin/feishu_server.rs"

[lib]
path = "src/lib.rs"
