[package]
name = "llm_tool_selection_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI / test runner
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for LLM calls
reqwest = { version = "0.12", features = ["json"] }

# Random for noise injection
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# For mockito testing (optional)
[dev-dependencies]
mockito = "1.5"