[package]
name = "omini-connect-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client library for OminiConnect"
license = "MIT"
repository = "https://github.com/allenpeng0705/OminiConnect"

[workspace]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
urlencoding = "2"
